--- a/Changes
+++ b/Changes
@@ -1,13 +1,22 @@
 Revision history for Redis
 
-0.01    Sun Mar 22 19:02:17 CET 2009
-        First version, tracking git://github.com/antirez/redis
-
-0.08	Tue Mar 24 22:38:59 CET 2009
-	This version supports new protocol introduced in beta 8
-	Version bump to be in-sync with Redis version
+1.900_01  Sun Jan 30 06:03:14 UTC 2011
+    * admin: change of maintainer to Pedro Melo <melo@simplicidade.org>
+    * feature: full support for Redis 2.x multi-bulk protocol
+    * feature: support for Redis PUBLISH/SUBSCRIBE commands
+    * feature: automatic encoding can be turned off, use encoding => undef on new() (performance++)
+    * performance: substantial performance improvements, specially with large responses
+    * fix: add POP method to our List Tie interface
 
 1.2001	Wed Mar 17 17:22:01 CET 2010
-	Redis protocol 1.2 support by Jeremy Zawodny <Jeremy@Zawodny.com> CPAN RT #54841
-	Version bump to be in-sync with Redis version
-	Correctly round-trip utf-8 encoded characters
+    * feadure: Redis protocol 1.2 support by Jeremy Zawodny <Jeremy@Zawodny.com> CPAN RT #54841
+    * Version bump to be in-sync with Redis version
+    * bug: Correctly round-trip utf-8 encoded characters
+
+0.08	Tue Mar 24 22:38:59 CET 2009
+    * This version supports new protocol introduced in beta 8
+    * Version bump to be in-sync with Redis version
+
+0.01    Sun Mar 22 19:02:17 CET 2009
+    * First version, tracking git://github.com/antirez/redis
+
