--- a/README
+++ b/README
@@ -1,44 +1,14 @@
-Redis
-
-Perl binding for Redis database which is in-memory hash store with
-support for scalars, arrays and sets and disk persistence.
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-	perl Makefile.PL
-	make
-	make test
-	make install
-
-SUPPORT AND DOCUMENTATION
-
-After installing, you can find documentation for this module with the
-perldoc command.
-
-    perldoc Redis
-
-You can also look for information at:
-
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Redis
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Redis
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Redis
-
-    Search CPAN
-        http://search.cpan.org/dist/Redis
 
 
-COPYRIGHT AND LICENCE
+This archive contains the distribution Redis,
+version 1.950:
 
-Copyright (C) 2011 Pedro Melo
-Copyright (C) 2009-2010 Dobrica Pavlinusic
+  Perl binding for Redis database
 
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+This software is Copyright (c) 2012 by Pedro Melo.
+
+This is free software, licensed under:
+
+  The Artistic License 2.0 (GPL Compatible)
+
 
