--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution Redis,
-version 1.961:
+version 1.962:
 
   Perl binding for Redis database
 
-This software is Copyright (c) 2012 by Pedro Melo.
+This software is Copyright (c) 2013 by Pedro Melo, Damien Krotkine.
 
 This is free software, licensed under:
 
